@@ -949,7 +949,6 @@ MagickExport KernelInfo *AcquireKernelBuiltIn(const KernelInfoType type,
   switch(type) {
     case UndefinedKernel:    /* These should not call this function */
     case UserDefinedKernel:
-    case TestKernel:
       break;
     case UnityKernel:      /* Named Descrete Convolution Kernels */
     case LaplacianKernel:
@@ -961,6 +960,7 @@ MagickExport KernelInfo *AcquireKernelBuiltIn(const KernelInfoType type,
     case FreiChenKernel:
     case EdgesKernel:       /* Hit and Miss kernels */
     case CornersKernel:
+    case ThinDiagonalsKernel:
     case LineEndsKernel:
     case LineJunctionsKernel:
     case RidgesKernel:
@@ -1684,6 +1684,42 @@ MagickExport KernelInfo *AcquireKernelBuiltIn(const KernelInfoType type,
           return(kernel);
         kernel->type = type;
         ExpandRotateKernelInfo(kernel, 90.0); /* Expand 90 degree rotations */
+        break;
+      }
+    case ThinDiagonalsKernel:
+      {
+        switch ( (int) args->rho ) {
+          case 0:
+          default:
+            { KernelInfo
+                *new_kernel;
+              kernel=ParseKernelArray("3: 0,0,0  0,1,1  1,1,-");
+              if (kernel == (KernelInfo *) NULL)
+                return(kernel);
+              kernel->type = type;
+              new_kernel=ParseKernelArray("3: 0,0,1  0,1,1  0,1,-");
+              if (new_kernel == (KernelInfo *) NULL)
+                return(DestroyKernelInfo(kernel));
+              new_kernel->type = type;
+              LastKernelInfo(kernel)->next = new_kernel;
+              ExpandMirrorKernelInfo(kernel);
+              break;
+            }
+          case 1:
+            kernel=ParseKernelArray("3: 0,0,0  0,1,1  1,1,-");
+            if (kernel == (KernelInfo *) NULL)
+              return(kernel);
+            kernel->type = type;
+            RotateKernelInfo(kernel, args->sigma);
+            break;
+          case 2:
+            kernel=ParseKernelArray("3: 0,0,1  0,1,1  0,1,-");
+            if (kernel == (KernelInfo *) NULL)
+              return(kernel);
+            kernel->type = type;
+            RotateKernelInfo(kernel, args->sigma);
+            break;
+        }
         break;
       }
     case LineEndsKernel:
